--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QuizIT - Master Your Coding Skills</title>
+    <title>QuizIT — Advance Your Programming Mastery</title>
     <style>
         * {
             margin: 0;
@@ -628,7 +628,7 @@
             <div class="card">
                 <h3 class="card-title">Developer's Information</h3>
                 <p><strong>Name:</strong> John Steven Amistoso Macapañas</p>
-                <p><strong>Email:</strong> WxyzOfficial@gmail.com</p>
+                <p><strong>Email:</strong> WxyzDevOfficial@gmail.com</p>
                 <p><strong>Location:</strong> Catbalogan City, Samar Philippines</p>
                 <p><strong>School:</strong> Currently 4th Year Student at Samar State Univeristy | BS - Information Technology</p>
             </div>
@@ -6677,3 +6677,4 @@
     </script>
 </body>
 </html>
+
