--- a/index.html
+++ b/index.html
@@ -624,6 +624,13 @@
                 <p style="margin-bottom: 20px; color: #9ca3af;">Test your knowledge with our comprehensive quiz system.</p>
                 <button class="btn btn-primary" onclick="showView('quiz')">Start Quiz</button>
             </div>
+            
+            <div class="card">
+                <h3 class="card-title">Learning Resources</h3>
+                <div id="learningResources">
+                    <!-- Learning resources will be populated based on selected language -->
+                </div>
+            </div>
 
             <div class="card">
                 <h3 class="card-title">Developer's Information</h3>
@@ -632,12 +639,13 @@
                 <p><strong>Location:</strong> Catbalogan City, Samar Philippines</p>
                 <p><strong>School:</strong> Currently 4th Year Student at Samar State Univeristy | BS - Information Technology</p>
             </div>
-            
+
             <div class="card">
-                <h3 class="card-title">Learning Resources</h3>
-                <div id="learningResources">
-                    <!-- Learning resources will be populated based on selected language -->
-                </div>
+                <h3 class="card-title">About QuizIT</h3>
+                <p><strong>QuizIT</strong> is an advanced, interactive platform designed to help IT students master programming knowledge through quizzes and coding challenges.</p>
+                <p>It provides a modern, user-friendly interface where students can select their preferred programming languages, access curated learning resources, and test their skills in a dynamic environment.</p>
+                <p>With secure login options, including Email/Password and Google Sign-In, QuizIT ensures personalized and safe learning experiences for all users.</p>
+                <p>Developed with dedication by <strong>John Steven Amistoso Macapañas</strong>, a 4th-year Information Technology student at Samar State University, Catbalogan City, Samar, Philippines.</p>
             </div>
         </div>
     </div>
@@ -6677,4 +6685,3 @@
     </script>
 </body>
 </html>
-
