--- a/index.html
+++ b/index.html
@@ -642,10 +642,7 @@
 
             <div class="card">
                 <h3 class="card-title">About QuizIT</h3>
-                <p><strong>QuizIT</strong> is an advanced, interactive platform designed to help IT students master programming knowledge through quizzes and coding challenges.</p>
-                <p>It provides a modern, user-friendly interface where students can select their preferred programming languages, access curated learning resources, and test their skills in a dynamic environment.</p>
-                <p>With secure login options, including Email/Password and Google Sign-In, QuizIT ensures personalized and safe learning experiences for all users.</p>
-                <p>Developed with dedication by <strong>John Steven Amistoso Macapañas</strong>, a 4th-year Information Technology student at Samar State University, Catbalogan City, Samar, Philippines.</p>
+                <p>QuizIT is a modern platform for IT students to practice programming through quizzes and coding challenges. Users can choose their preferred languages, access learning resources, and test their skills safely.</p>
             </div>
         </div>
     </div>
